tests/regression/500_INTEGRATION_TESTING/540_VALIDATION/403_import_unknown_alias/expected.txt
error: UnknownImportAlias
/Users/larsde/src/koru/src/module_resolver.zig:405:17: 0x104c4d4f7 in resolveBoth (koruc)
                return error.UnknownImportAlias;
                ^
/Users/larsde/src/koru/src/parser.zig:6852:13: 0x104bf31b3 in parseAndRegisterImport (koruc)
            return err;
            ^
/Users/larsde/src/koru/src/parser.zig:6827:9: 0x104bf2d83 in parseImportDecl (koruc)
        try self.parseAndRegisterImport(path, final_name);
        ^
/Users/larsde/src/koru/src/parser.zig:936:38: 0x104c1ad13 in parseKoruConstruct (koruc)
            return .{ .import_decl = try self.parseImportDecl() };
                                     ^
/Users/larsde/src/koru/src/parser.zig:736:25: 0x104c2489f in parse (koruc)
                        return err;
                        ^
/Users/larsde/src/koru/src/main.zig:5843:9: 0x104d71c2f in main (koruc)
        return err;
        ^
